@@ -1,3 +1,4 @@
+- help-, output-, and editor-views can be detached to separate windows
 - allow to bypass startup dialog
 - back/forward navigation in help pages
 - can print help pages and output
